# CeLux

./: .clang-format  .gitignore  CMakeLists-linux.txt  CMakeLists.txt  CMakePresets.json  MANIFEST.in  MANIFEST.ini  README.md  benchmark_report.html  benchmark_results.json  build.py  cpusetup.py  ffmpeg_filters.json  generateclasses.py  gpusetup.py  profiling_results.txt  pyproject.toml  requirements-dev.txt  scikit-build.toml  setup.cfg  setup.py  test.bat  vcpkg-configuration.json  vcpkg.json  version.txt
.github/ISSUE_TEMPLATE/: BUGREPORT.yaml  BUGREPORT.yml  CODECREQ.yaml  FEATUREREQ.yaml  SUPPORTREQ.yaml
.github/workflows/: build.yml  createRelease.yaml  createReleaseAndTest.yaml  runTests.yaml  runtests.yaml
celux/: __init__.py  _celux.pyd  _celux.pyi  celux.cp313-win_amd64.pyd  celux.pyd  celux.pyi
celux_cuda/: __init__.py  celux.pyd  celux.pyi
docs/: BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  FAQ.md  GETTINGSTARTED.md  INSTALLATION.md  linux.md  linx.md
ffmpy/: __init__.py  ffmpy.cp312-win_amd64.pyd  ffmpy.pyd  ffmpy.pyi
include/CeLux/: CxCore.hpp  Encoder.hpp  Factory.hpp  Filter.hpp  Frame.hpp  Json.hpp  Logger.hpp  TensorBuilder.hpp
include/CeLux/backends/: Configs.hpp  Decoder.hpp  Decoders.hpp  Encoder.hpp  Encoders.hpp  TensorBuffer.hpp
include/CeLux/backends/cpu/: Decoder.hpp  Encoder.hpp  Remuxer.hpp
include/CeLux/backends/gpu/cuda/: Decoder.hpp  Encoder.hpp
include/CeLux/conversion/: Conversion.hpp  IConverter.hpp
include/CeLux/conversion/cpu/: AutoToRGB.hpp  BGRAToRGB.hpp  BGRToNV12.hpp  BGRToRGB.hpp  CPUConverter.hpp  CPUConverters.hpp  GBRPToRGB.hpp  NV12ToBGR.hpp  NV12ToRGB.hpp  RGB24ToYUV420P.hpp  RGB48ToYUV420P10.hpp  RGBAToRGB.hpp  RGBToAuto.hpp  RGBToNV12.hpp  RGBToRGB.hpp  RGBToYUV420P.hpp  YUV420P10ToRGB48.hpp  YUV420P12ToRGB48.hpp  YUV420PToRGB.hpp  YUV422P10ToRGB48.hpp  YUV422P12ToRGB48.hpp  YUV422P8ToRGB24.hpp  YUV444P10ToRGB48.hpp  YUV444P12ToRGB48.hpp  YUV444P8ToRGB24.hpp
include/CeLux/conversion/gpu/: GPUConverters.hpp
include/CeLux/conversion/gpu/cuda/: BGRToNV12.hpp  BaseConverter.hpp  NV12ToBGR.hpp  NV12ToRGB.hpp  P010LEToRGB.hpp  RGB48ToP010LE.hpp  RGBToNV12.hpp  RGBToYUV420P.hpp
include/CeLux/error/: CxException.hpp  FFException.hpp
include/CeLux/filters/: A3dscope.hpp  A3dscope_bindings.hpp  Abitscope.hpp  Abitscope_bindings.hpp  Acopy.hpp  Acopy_bindings.hpp  Addroi.hpp  Addroi_bindings.hpp  Aderivative.hpp  Aderivative_bindings.hpp  Adrawgraph.hpp  Adrawgraph_bindings.hpp  Agraphmonitor.hpp  Agraphmonitor_bindings.hpp  Ahistogram.hpp  Ahistogram_bindings.hpp  Aintegral.hpp  Aintegral_bindings.hpp  Alatency.hpp  Alatency_bindings.hpp  Allrgb.hpp  Allrgb_bindings.hpp  Allyuv.hpp  Allyuv_bindings.hpp  Alphaextract.hpp  Alphaextract_bindings.hpp  Alphamerge.hpp  Alphamerge_bindings.hpp  Amplify.hpp  Amplify_bindings.hpp  Amultiply.hpp  Amultiply_bindings.hpp  Anull.hpp  Anull_bindings.hpp  Anullsink.hpp  Anullsink_bindings.hpp  Aphasemeter.hpp  Aphasemeter_bindings.hpp  Apsnr.hpp  Apsnr_bindings.hpp  (+578 more)
include/CeLux/python/: VideoEncoder.hpp  VideoReader.hpp  VideoWriter.hpp
include/FFMPY/: Decoder.hpp  Encoder.hpp  FFCore.hpp  FFException.hpp  Factory.hpp  Frame.hpp  MediaDecoder.hpp  MediaFormat.hpp  MediaResampler.hpp  Timer.hpp
include/FFMPY/backends/: Decoder.hpp  Decoders.hpp
include/FFMPY/backends/cpu/: Decoder.hpp
include/FFMPY/backends/gpu/cuda/: Decoder.hpp
include/FFMPY/conversion/: BGRToNV12.hpp  BaseConverter.hpp  Conversion.hpp  GPUConverters.hpp  IConverter.hpp  NV12ToBGR.hpp  NV12ToRGB.hpp  RGBToNV12.hpp  conversion.hpp  converters.hpp
include/FFMPY/conversion/cpu/: CPUConverter.hpp  CPUConverters.hpp  NV12ToBGR.hpp  NV12ToRGB.hpp
include/FFMPY/conversion/gpu/: GPUConverters.hpp
include/FFMPY/error/: FFException.hpp
include/FFMPY/python/: VideoReader.hpp  VideoWriter.hpp
python/: celux.pyd
scripts/: update_readme_benchmarks.py
src/CeLux/: Encoder.cpp  Frame.cpp  Logger.cpp  TensorBuffer.cpp
src/CeLux/backends/: Decoder.cpp  Encoder.cpp  Remuxer.cpp
src/CeLux/cuda/: P010LEToRGB48.cu  RGB48ToP010LE.cu  bgr_to_nv12.cu  nv12_to_bgr.cu  rgb_to_nv12.cu
src/CeLux/filters/: A3dscope.cpp  A3dscope_bindings.cpp  Abitscope.cpp  Abitscope_bindings.cpp  Acopy.cpp  Acopy_bindings.cpp  Addroi.cpp  Addroi_bindings.cpp  Aderivative.cpp  Aderivative_bindings.cpp  Adrawgraph.cpp  Adrawgraph_bindings.cpp  Agraphmonitor.cpp  Agraphmonitor_bindings.cpp  Ahistogram.cpp  Ahistogram_bindings.cpp  Aintegral.cpp  Aintegral_bindings.cpp  Alatency.cpp  Alatency_bindings.cpp  Allrgb.cpp  Allrgb_bindings.cpp  Allyuv.cpp  Allyuv_bindings.cpp  Alphaextract.cpp  Alphaextract_bindings.cpp  Alphamerge.cpp  Alphamerge_bindings.cpp  Amplify.cpp  Amplify_bindings.cpp  Amultiply.cpp  Amultiply_bindings.cpp  Anull.cpp  Anull_bindings.cpp  Anullsink.cpp  Anullsink_bindings.cpp  Aphasemeter.cpp  Aphasemeter_bindings.cpp  Apsnr.cpp  Apsnr_bindings.cpp  (+578 more)
src/CeLux/python/: Bindings.cpp  VideoEncoder.cpp  VideoReader.cpp  VideoWriter.cpp
src/FFMPY/: Decoder.cpp  Encoder.cpp  Frame.cpp  MediaDecoder.cpp  MediaFormat.cpp  MediaResampler.cpp
src/FFMPY/backends/: Decoder.cpp
src/FFMPY/cuda/: bgr_to_nv12.cu  nv12_to_bgr.cu  nv12_to_rgb.cu  rgb_to_nv12.cu
src/FFMPY/python/: Bindings.cpp  VideoReader.cpp  VideoWriter.cpp  ffmpy.pyi
src/FFMPY/tests/: main.cpp
src/FFMPY/tests/python/: test1.py
tests/: colortest.py  compare_frame_ranges.py  demo.py  download_test_videos.py  full_circuit_test.py  main.cpp  requirements-runner.txt  test.py  test1.py  test2.py  test3.py  test_audio.py  test_av_encode.py  test_color_difference.py  test_color_fmts.py  test_decoder.cpp  test_frame_at.py  test_frame_range.py  test_get_item.py  test_media_format.cpp  test_resampler.cpp  test_time_range.py  test_video_fmt.py  test_video_reader.py  testspeed.py
tests/benchmarks/: test_benchmarks.py  testspeed.py  total_frames.json
tests/python/: compare.py  test.py  test1.py  test2.py  test3.py  test4.py  test_celux.py  test_ffmpy.py
tests/usage/: example1.py  seek.py
tests/utils/: generate_test_videos.py  video_downloader.py
(+8 files in other folders)
