[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "celux"
version = "0.6.4.1"
readme = "README.md"
authors = [
    {name = "Trenton Flanagan", email = "spigonvids@gmail.com"},
]
description = "Lightspeed video decoding directly into tensors!"
requires-python = ">=3.13"
license = {text = "AGPL-3.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: Microsoft :: Windows",
]
keywords = ["ffmpeg", "video", "ml", "pytorch", "decode", "tensors", "inference"]

[project.urls]
Homepage = "https://github.com/Trentonom0r3/celux"
Repository = "https://github.com/Trentonom0r3/celux"
Documentation = "https://github.com/Trentonom0r3/celux/blob/master/README.md"
Changelog = "https://github.com/Trentonom0r3/celux/blob/master/docs/CHANGELOG.md"
Issues = "https://github.com/Trentonom0r3/celux/issues"

# dependencies = [
#     "torch>=2.7",
# ]

[tool.setuptools.packages.find]
include = [
    "celux",
]

[tool.setuptools.package-data]
celux = ["*.pyd", "*.dll", "*.pyi", "*.py", "py.typed"]
