[build-system]
requires = ["scikit-build-core", "pybind11", "wheel"]
build-backend = "scikit_build_core.build"

[project]
name = "celux"
version = "0.6.6.1"
readme = "README.md"
authors = [
    {name = "Trenton Flanagan", email = "spigonvids@gmail.com"},
]
description = "Lightspeed video decoding directly into tensors!"
requires-python = ">=3.13"
license = {text = "AGPL-3.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
keywords = ["ffmpeg", "video", "ml", "pytorch", "decode", "tensors", "inference"]

[project.urls]
Homepage = "https://github.com/Trentonom0r3/celux"
Repository = "https://github.com/Trentonom0r3/celux"
Documentation = "https://github.com/Trentonom0r3/celux/blob/master/README.md"
Changelog = "https://github.com/Trentonom0r3/celux/blob/master/docs/CHANGELOG.md"
Issues = "https://github.com/Trentonom0r3/celux/issues"

[tool.scikit-build]
cmake.args = [
  "-DCMAKE_TOOLCHAIN_FILE=$ENV{VCPKG_TOOLCHAIN_FILE}",
  "-DVCPKG_TARGET_TRIPLET=$ENV{VCPKG_TARGET_TRIPLET}",
  "-DCMAKE_PREFIX_PATH=$ENV{VCPKG_ROOT}/installed/$ENV{VCPKG_TARGET_TRIPLET}",
  "-DCMAKE_MODULE_PATH=$ENV{VCPKG_ROOT}/installed/$ENV{VCPKG_TARGET_TRIPLET}/share/ffmpeg"
]
